pitop/labs/web/blueprints/battery/battery/styles.css
.batteryContainer {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding: 5px;
  background-color: #CCCA;
}

.batteryOuter {
  border-radius: 5px;
  border: 2px solid #444;
  padding: 1px;
  width: 50px;
  height: 20px;
  position: relative;
}

.batteryBump {
  border-radius: 3px;
  background-color: #444;
  margin: 1px;
  width: 3px;
  height: 8px;
}

#batteryLevel {
  border-radius: 2px;
  height: 100%;
  box-sizing: border-box;
}

#batteryPercentage {
  height: 100%;
  font-family: 'Consolas', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
  text-align: right;
  padding: 0 5px;
  color: #222;
}

#chargeIcon {
  position: absolute;
  top: 50%;
  left: 50%;
  font-size: 20px;
  color: #444;
  transform: translateY(-50%) translateX(-50%) rotate(90deg);
  animation: fadeinout 2s infinite linear alternate;
  opacity: 0;
}

@keyframes fadeinout {
  0% { opacity: 0.5; }
  100% { opacity: 1; }
}

@-webkit-keyframes fadeinout {
  0% { opacity: 0.5; }
  100% { opacity: 1; }
}

